--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=drop
+spring.jpa.hibernate.ddl-auto=none
 
 # JPA specific configs
 spring.jpa.properties.hibernate.show_sql=true
